# moron

./: .gitignore  .lisa.toml  CLAUDE.md  Cargo.toml
docs/: ROADMAP.md  rdspi-workflow.md  specification.md
docs/active/stories/: S-002.md  S-003.md  S-004.md  S-005.md  S-006.md  S-007.md  S-008.md  S-009.md  S-010.md  S-011.md  S-012.md  S-013.md
docs/active/tickets/: T-002-01.md  T-002-02.md  T-002-03.md  T-002-04.md  T-002-05.md  T-003-01.md  T-003-02.md  T-003-03.md  T-003-04.md  T-004-01.md  T-004-02.md  T-004-03.md  T-004-04.md  T-005-01.md  T-005-02.md  T-005-03.md  T-005-04.md  T-006-01.md  T-006-02.md  T-006-03.md  T-006-04.md  T-007-01.md  T-007-02.md  T-007-03.md  T-007-04.md  T-008-01.md  T-008-02.md  T-008-03.md  T-009-01.md  T-009-02.md  T-009-03.md  T-009-04.md  T-010-01.md  T-010-02.md  T-010-03.md  T-010-04.md  T-011-01.md  T-011-02.md  T-011-03.md  T-011-04.md  (+8 more)
docs/archive/stories/: S-002.md  S-004.md  S-005.md  S-006.md
docs/knowledge/: lisa-loop-feedback.md  lisa-loop-setup-guide.md
examples/: hello_world.rs
gallery/: README.md
moron-cli/: Cargo.toml
moron-cli/src/: main.rs
moron-core/: Cargo.toml
moron-core/src/: build.rs  camera.rs  chromium.rs  demo.rs  facade.rs  ffmpeg.rs  frame.rs  lib.rs  renderer.rs  timeline.rs  what_is_moron.rs
moron-core/tests/: e2e.rs  integration.rs  visual.rs
moron-macros/: Cargo.toml
moron-macros/src/: lib.rs
moron-techniques/: Cargo.toml
moron-techniques/src/: camera.rs  data.rs  emphasis.rs  lib.rs  motion.rs  reveals.rs  staging.rs  technique.rs  transitions.rs
moron-techniques/tests/: composition.rs
moron-themes/: Cargo.toml
moron-themes/src/: defaults.rs  lib.rs  theme.rs
moron-themes/tests/: css_sync.rs
moron-voice/: Cargo.toml
moron-voice/src/: alignment.rs  audio.rs  backend.rs  kokoro.rs  lib.rs  piper.rs
moron-voice/tests/: tts.rs
(+148 files in other folders)
